NetBSD Problem Report #40011

From hira@po6.nsk.ne.jp  Sun Nov 23 19:34:47 2008
Return-Path: <hira@po6.nsk.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 6392863BD2D
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 23 Nov 2008 19:34:47 +0000 (UTC)
Message-Id: <20081123193442.5AB6F2D44C@firefly.localdomain>
Date: Mon, 24 Nov 2008 04:34:42 +0900 (JST)
From: hira@po6.nsk.ne.jp
Reply-To: hira@po6.nsk.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Subject: can't load smbfs module
X-Send-Pr-Version: 3.95

>Number:         40011
>Category:       kern
>Synopsis:       can't load smbfs module
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    maxv
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Nov 23 19:35:00 +0000 2008
>Closed-Date:    Tue Jul 15 18:57:57 +0000 2014
>Last-Modified:  Tue Jul 15 18:57:57 +0000 2014
>Originator:     Kouichirou Hiratsuka
>Release:        NetBSD 5.99.3
>Organization:
>Environment:
System: NetBSD firefly.localdomain 5.99.3 NetBSD 5.99.3 (X32) #9: Sun Nov 23 06:31:41 JST 2008 root@firefly.localdomain:/obj/i386/usr/src/sys/arch/i386/compile/X32 i386
Architecture: i386
Machine: i386
>Description:
	smbfs module cannot be loaded.

# modload smbfs
modload: Exec format error

	The following messages are appeared in dmesg(8).
	This module seems to require the files in sys/netsmb.

WARNING: linker error: symbol `smb_t2_alloc' not found
WARNING: linker error: symbol `md_get_uint16' not found
WARNING: linker error: symbol `mb_put_uint8' not found
WARNING: linker error: symbol `smb_rq_alloc' not found
WARNING: linker error: symbol `smb_share_put' not found
WARNING: linker error: symbol `smb_rq_wstart' not found
WARNING: linker error: symbol `md_get_int64le' not found
WARNING: linker error: symbol `mb_put_uint32le' not found
WARNING: linker error: symbol `md_get_uint32le' not found
WARNING: linker error: symbol `mb_put_mem' not found
WARNING: linker error: symbol `mb_init' not found
WARNING: linker error: symbol `smb_rq_getrequest' not found
WARNING: linker error: symbol `md_get_uint16le' not found
WARNING: linker error: symbol `mb_put_int64le' not found
WARNING: linker error: symbol `smb_rq_bstart' not found
WARNING: linker error: symbol `smb_rq_enqueue' not found
WARNING: linker error: symbol `smb_put_dmem' not found
WARNING: linker error: symbol `smb_rq_simple' not found
WARNING: linker error: symbol `mb_put_uint16le' not found
WARNING: linker error: symbol `smb_t2_done' not found
WARNING: linker error: symbol `smb_makescred' not found
WARNING: linker error: symbol `smb_dev2share' not found
WARNING: linker error: symbol `md_get_uint8' not found
WARNING: linker error: symbol `smb_rq_getreply' not found
WARNING: linker error: symbol `smb_read' not found
WARNING: linker error: symbol `mb_reserve' not found
WARNING: linker error: symbol `smb_rq_done' not found
WARNING: linker error: symbol `md_get_int64' not found
WARNING: linker error: symbol `smb_t2_request' not found
WARNING: linker error: symbol `smb_rq_wend' not found
WARNING: linker error: symbol `smb_write' not found
WARNING: linker error: symbol `smb_rq_bend' not found
WARNING: linker error: symbol `smb_rq_reply' not found
WARNING: linker error: symbol `smb_rq_setcallback' not found
WARNING: linker error: symbol `md_get_mem' not found
WARNING: linker error: symbol `smb_share_lock' not found
WARNING: linker error: symbol `iconv_convmem' not found
WARNING: linker error: symbol `md_get_uint32' not found
WARNING: linker error: symbol `smb_iod_removerq' not found
WARNING: linker error: symbol `smb_share_unlock' not found
WARNING: module error: unable to affix module

>How-To-Repeat:
	modload smbfs

>Fix:

>Release-Note:

>Audit-Trail:
From: Andreas Wrede <andreas@planix.com>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org,
 gnats-admin@netbsd.org,
 netbsd-bugs@netbsd.org
Subject: Re: kern/40011: can't load smbfs module
Date: Sun, 23 Nov 2008 16:08:45 -0500

 This is an OpenPGP/MIME signed message (RFC 2440 and 3156)
 --Apple-Mail-124-59222316
 Content-Type: text/plain; charset=US-ASCII; format=flowed
 Content-Transfer-Encoding: 7bit

 >
 Same with the nullfs module:

 # modload nullfs
 modload: Exec format error

 And the following kernel messagsae
 WARNING: linker error: symbol `layer_remove' not found
 WARNING: linker error: symbol `layer_setattr' not found
 WARNING: linker error: symbol `layer_node_create' not found
 WARNING: linker error: symbol `layer_fsync' not found
 WARNING: linker error: symbol `layerfs_renamelock_exit' not found
 WARNING: linker error: symbol `layer_unlock' not found
 WARNING: linker error: symbol `layer_print' not found
 WARNING: linker error: symbol `layer_inactive' not found
 WARNING: linker error: symbol `layerfs_quotactl' not found
 WARNING: linker error: symbol `layerfs_fhtovp' not found
 WARNING: linker error: symbol `layer_rename' not found
 WARNING: linker error: symbol `layer_rmdir' not found
 WARNING: linker error: symbol `layerfs_start' not found
 WARNING: linker error: symbol `layerfs_snapshot' not found
 WARNING: linker error: symbol `layer_bypass' not found
 WARNING: linker error: symbol `layerfs_vptofh' not found
 WARNING: linker error: symbol `layer_access' not found
 WARNING: linker error: symbol `layer_bmap' not found
 WARNING: linker error: symbol `layer_reclaim' not found
 WARNING: linker error: symbol `layer_getpages' not found
 WARNING: linker error: symbol `layerfs_init' not found
 WARNING: linker error: symbol `layer_lock' not found
 WARNING: linker error: symbol `layer_islocked' not found
 WARNING: linker error: symbol `layer_lookup' not found
 WARNING: linker error: symbol `layerfs_renamelock_enter' not found
 WARNING: linker error: symbol `layerfs_done' not found
 WARNING: linker error: symbol `layerfs_statvfs' not found
 WARNING: linker error: symbol `layer_getattr' not found
 WARNING: linker error: symbol `layer_bwrite' not found
 WARNING: linker error: symbol `layer_node_alloc' not found
 WARNING: linker error: symbol `layer_putpages' not found
 WARNING: linker error: symbol `layer_open' not found
 WARNING: linker error: symbol `layerfs_root' not found
 WARNING: linker error: symbol `layerfs_vget' not found
 WARNING: linker error: symbol `layerfs_sync' not found
 WARNING: module error: unable to affix module

 Other modules load fine:
 # modstat
 NAME            CLASS   SOURCE  REFS    SIZE    REQUIRES
 accf_dataready  misc    filesys 0       288     -
 compat          misc    filesys 0       20595   -
 coredump        misc    filesys 1       2814    -
 drm             misc    builtin 0       -       -
 exec_elf32      misc    filesys 0       6709    coredump
 exec_script     misc    filesys 0       1091    -
 ffs             vfs     boot    0       162459  -
 kernfs          vfs     filesys 0       10229   -
 ksem            misc    builtin 0       -       -
 nfs             vfs     filesys 1       135689  -
 nfsserver       misc    filesys 0       82534   nfs
 procfs          vfs     filesys 0       26167   -
 putter          misc    builtin 0       -       -

 --
      aew


 --Apple-Mail-124-59222316
 content-type: application/pgp-signature; x-mac-type=70674453;
 	name=PGP.sig
 content-description: This is a digitally signed message part
 content-disposition: inline; filename=PGP.sig
 content-transfer-encoding: 7bit

 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (Darwin)

 iD8DBQFJKcZdEh/h9J/TQyERAi3EAJ4kv+pG9zwC2OnQrzKUiIFXF5thRQCgmSyZ
 0/YLOXhH9B8R0xwOmIyzObg=
 =F35i
 -----END PGP SIGNATURE-----

 --Apple-Mail-124-59222316--

From: Andreas Wrede <andreas@planix.com>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org,
 gnats-admin@netbsd.org,
 netbsd-bugs@netbsd.org
Subject: Re: kern/40011: can't load smbfs module
Date: Mon, 8 Dec 2008 05:42:07 -0500

 This is an OpenPGP/MIME signed message (RFC 2440 and 3156)
 --Apple-Mail-180--829859019
 Content-Type: text/plain; charset=US-ASCII; format=flowed; delsp=yes
 Content-Transfer-Encoding: 7bit

 >>
 > Same with the nullfs module:
 >
 > # modload nullfs
 > modload: Exec format error
 >
 > And the following kernel messagsae
 > WARNING: linker error: symbol `layer_remove' not found
 > WARNING: linker error: symbol `layer_setattr' not found
 > WARNING: linker error: symbol `layer_node_create' not found
 > WARNING: linker error: symbol `layer_fsync' not found
 > WARNING: linker error: symbol `layerfs_renamelock_exit' not found
 > WARNING: linker error: symbol `layer_unlock' not found
 > WARNING: linker error: symbol `layer_print' not found
 > WARNING: linker error: symbol `layer_inactive' not found
 > WARNING: linker error: symbol `layerfs_quotactl' not found
 > WARNING: linker error: symbol `layerfs_fhtovp' not found
 > WARNING: linker error: symbol `layer_rename' not found
 > WARNING: linker error: symbol `layer_rmdir' not found
 > WARNING: linker error: symbol `layerfs_start' not found
 > WARNING: linker error: symbol `layerfs_snapshot' not found
 > WARNING: linker error: symbol `layer_bypass' not found
 > WARNING: linker error: symbol `layerfs_vptofh' not found
 > WARNING: linker error: symbol `layer_access' not found
 > WARNING: linker error: symbol `layer_bmap' not found
 > WARNING: linker error: symbol `layer_reclaim' not found
 > WARNING: linker error: symbol `layer_getpages' not found
 > WARNING: linker error: symbol `layerfs_init' not found
 > WARNING: linker error: symbol `layer_lock' not found
 > WARNING: linker error: symbol `layer_islocked' not found
 > WARNING: linker error: symbol `layer_lookup' not found
 > WARNING: linker error: symbol `layerfs_renamelock_enter' not found
 > WARNING: linker error: symbol `layerfs_done' not found
 > WARNING: linker error: symbol `layerfs_statvfs' not found
 > WARNING: linker error: symbol `layer_getattr' not found
 > WARNING: linker error: symbol `layer_bwrite' not found
 > WARNING: linker error: symbol `layer_node_alloc' not found
 > WARNING: linker error: symbol `layer_putpages' not found
 > WARNING: linker error: symbol `layer_open' not found
 > WARNING: linker error: symbol `layerfs_root' not found
 > WARNING: linker error: symbol `layerfs_vget' not found
 > WARNING: linker error: symbol `layerfs_sync' not found
 > WARNING: module error: unable to affix module
 >

 This part of the problem was fixed with the introduction of the  
 layerfs module. The original linker errors for symbols from smbfs are  
 still present.

 -- 
      aew


 --Apple-Mail-180--829859019
 content-type: application/pgp-signature; x-mac-type=70674453;
 	name=PGP.sig
 content-description: This is a digitally signed message part
 content-disposition: inline; filename=PGP.sig
 content-transfer-encoding: 7bit

 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (Darwin)

 iD8DBQFJPPn/Eh/h9J/TQyERAnMGAKDwY5gWdjDmgrHelqhW71QPU+A+FACgkmLm
 d5+6b1H3s0rUEappQh/EpgY=
 =OPgs
 -----END PGP SIGNATURE-----

 --Apple-Mail-180--829859019--

From: Markus W Kilbinger <mk@kilbi.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/40011: can't load smbfs module
Date: Sun, 24 May 2009 13:40:15 +0200

 > This part of the problem was fixed with the introduction of the
 > layerfs module. The original linker errors for symbols from smbfs
 > are still present.

 Hmm, I've added

   pseudo-device   nsmb            # experimental - SMB requester

 to a MODULAR kernel's config and that made the kernel capable of
 loading the smbfs module:

   $ /sbin/modstat  
   NAME            CLASS   SOURCE  REFS    SIZE    REQUIRES
   [...]
   smbfs           vfs     filesys 0       32391   -
   [...]

 Can this be the solution?

 Markus.

From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org, hira@po6.nsk.ne.jp
Subject: Re: kern/40011: can't load smbfs module
Date: Sun, 24 May 2009 16:15:17 +0000

 On Sun, May 24, 2009 at 12:50:03PM +0000, Markus W Kilbinger wrote:
 > The following reply was made to PR kern/40011; it has been noted by GNATS.
 > 
 > From: Markus W Kilbinger <mk@kilbi.de>
 > To: gnats-bugs@NetBSD.org
 > Cc: 
 > Subject: Re: kern/40011: can't load smbfs module
 > Date: Sun, 24 May 2009 13:40:15 +0200
 > 
 >  > This part of the problem was fixed with the introduction of the
 >  > layerfs module. The original linker errors for symbols from smbfs
 >  > are still present.
 >  
 >  Hmm, I've added
 >  
 >    pseudo-device   nsmb            # experimental - SMB requester
 >  
 >  to a MODULAR kernel's config and that made the kernel capable of
 >  loading the smbfs module:
 >  
 >    $ /sbin/modstat  
 >    NAME            CLASS   SOURCE  REFS    SIZE    REQUIRES
 >    [...]
 >    smbfs           vfs     filesys 0       32391   -
 >    [...]
 >  
 >  Can this be the solution?

 Hmm, I think the nsmb driver needs to be included in the module.

From: Markus W Kilbinger <mk@kilbi.de>
To: Andrew Doran <ad@netbsd.org>
Cc: gnats-bugs@NetBSD.org,
    kern-bug-people@netbsd.org,
    gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org,
    hira@po6.nsk.ne.jp
Subject: Re: kern/40011: can't load smbfs module
Date: Sun, 24 May 2009 22:54:29 +0200

 >>>>> "Andrew" == Andrew Doran <ad@netbsd.org> writes:

     Andrew> Hmm, I think the nsmb driver needs to be included in the
     Andrew> module.

 Should it be that easy?:

 Index: smbfs/Makefile
 ===================================================================
 RCS file: /cvsroot/src/sys/modules/smbfs/Makefile,v
 retrieving revision 1.1
 diff -u -r1.1 Makefile
 --- smbfs/Makefile	28 Jun 2008 16:11:36 -0000	1.1
 +++ smbfs/Makefile	24 May 2009 20:53:11 -0000
 @@ -5,7 +5,13 @@
  .PATH:	${S}/fs/smbfs

  KMOD=	smbfs
 -SRCS=	smbfs_io.c smbfs_kq.c smbfs_node.c smbfs_smb.c smbfs_subr.c \
 +
 +.PATH:	${S}/netsmb
 +SRCS=	iconv.c smb_conn.c smb_crypt.c smb_dev.c smb_iod.c smb_rq.c \
 +	smb_smb.c smb_subr.c smb_trantcp.c smb_usr.c subr_mchain.c
 +
 +.PATH:	${S}/fs/smbfs
 +SRCS+=	smbfs_io.c smbfs_kq.c smbfs_node.c smbfs_smb.c smbfs_subr.c \
  	smbfs_vfsops.c smbfs_vnops.c

  .include <bsd.kmodule.mk>

 Compiles and runs fine for me...

 Markus.

From: "Maxime Villard" <maxv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40011 CVS commit: src/sys/fs/smbfs
Date: Mon, 14 Jul 2014 16:29:50 +0000

 Module Name:	src
 Committed By:	maxv
 Date:		Mon Jul 14 16:29:50 UTC 2014

 Modified Files:
 	src/sys/fs/smbfs: smbfs_vfsops.c

 Log Message:
 smbfs depends on nsmb, so add the dependency as appropriate. Fixes
 	# modload smbfs
 on modular kernels, PR kern/40011, and probably system crashes.


 To generate a diff of this commit:
 cvs rdiff -u -r1.102 -r1.103 src/sys/fs/smbfs/smbfs_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->maxv
Responsible-Changed-By: maxv@NetBSD.org
Responsible-Changed-When: Tue, 15 Jul 2014 18:48:33 +0000
Responsible-Changed-Why:
I've fixed it


State-Changed-From-To: open->closed
State-Changed-By: maxv@NetBSD.org
State-Changed-When: Tue, 15 Jul 2014 18:57:57 +0000
State-Changed-Why:
Obvious issue, obvious fix, and arrival-date=2008


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.