smbfs depends on nsmb, so add the dependency as appropriate. Fixes 	# modload smbfs on modular kernels, PR kern/40011, and probably system crashes.